sggroup.tf
# Security Group

resource "aws_security_group" "sg-asg-instance" {
  name        = "asg-instance-sg"
  description = "Allow traffic to asg instances"
  vpc_id      = aws_vpc.cardapp-vpc.id

  ingress {
    description      = "ssh from anywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  
  ingress {
    description      = "http from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }


  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ASG-SG-POLICY"
  }
}
